first functions in the notebook

--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -27,13 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Loaded\n"
+     ]
+    }
+   ],
    "source": [
     "import helper\n",
     "\n",
@@ -59,13 +67,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small_vocab_en Line 1:  new jersey is sometimes quiet during autumn , and it is snowy in april .\n",
+      "small_vocab_fr Line 1:  new jersey est parfois calme pendant l' automne , et il est neigeux en avril .\n",
+      "small_vocab_en Line 2:  the united states is usually chilly during july , and it is usually freezing in november .\n",
+      "small_vocab_fr Line 2:  les états-unis est généralement froid en juillet , et il gèle habituellement en novembre .\n"
+     ]
+    }
+   ],
    "source": [
     "for sample_i in range(2):\n",
     "    print('small_vocab_en Line {}:  {}'.format(sample_i + 1, english_sentences[sample_i]))\n",
@@ -86,13 +105,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1823250 English words.\n",
+      "227 unique English words.\n",
+      "10 Most common words in the English dataset:\n",
+      "\"is\" \",\" \".\" \"in\" \"it\" \"during\" \"the\" \"but\" \"and\" \"sometimes\"\n",
+      "\n",
+      "1961295 French words.\n",
+      "355 unique French words.\n",
+      "10 Most common words in the French dataset:\n",
+      "\"est\" \".\" \",\" \"en\" \"il\" \"les\" \"mais\" \"et\" \"la\" \"parfois\"\n"
+     ]
+    }
+   ],
    "source": [
     "import collections\n",
     "\n",
@@ -137,13 +172,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'my': 12, 'fox': 5, 'study': 13, 'of': 14, 'lazy': 8, 'is': 19, 'quick': 2, 'short': 20, 'a': 3, 'this': 18, 'sentence': 21, 'jumps': 6, 'jove': 11, 'over': 7, 'won': 16, 'lexicography': 15, 'prize': 17, 'dog': 9, 'the': 1, 'by': 10, 'brown': 4}\n",
+      "\n",
+      "Sequence 1 in x\n",
+      "  Input:  The quick brown fox jumps over the lazy dog .\n",
+      "  Output: [1, 2, 4, 5, 6, 7, 1, 8, 9]\n",
+      "Sequence 2 in x\n",
+      "  Input:  By Jove , my quick study of lexicography won a prize .\n",
+      "  Output: [10, 11, 12, 2, 13, 14, 15, 16, 3, 17]\n",
+      "Sequence 3 in x\n",
+      "  Input:  This is a short sentence .\n",
+      "  Output: [18, 19, 3, 20, 21]\n"
+     ]
+    }
+   ],
    "source": [
     "import project_tests as tests\n",
     "from keras.preprocessing.text import Tokenizer\n",
@@ -156,7 +209,10 @@
     "    :return: Tuple of (tokenized x data, tokenizer used to tokenize x)\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return None, None\n",
+    "    tokenizer = Tokenizer()\n",
+    "    tokenizer.fit_on_texts(x)\n",
+    "    return tokenizer.texts_to_sequences(x), tokenizer\n",
+    "\n",
     "tests.test_tokenize(tokenize)\n",
     "\n",
     "# Tokenize Example output\n",
@@ -188,13 +244,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "length = None\n",
+    "if length is None:\n",
+    "    print(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequence 1 in x\n",
+      "  Input:  [1 2 4 5 6 7 1 8 9]\n",
+      "  Output: [1 2 4 5 6 7 1 8 9 0]\n",
+      "Sequence 2 in x\n",
+      "  Input:  [10 11 12  2 13 14 15 16  3 17]\n",
+      "  Output: [10 11 12  2 13 14 15 16  3 17]\n",
+      "Sequence 3 in x\n",
+      "  Input:  [18 19  3 20 21]\n",
+      "  Output: [18 19  3 20 21  0  0  0  0  0]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
@@ -208,7 +301,10 @@
     "    :return: Padded numpy array of sequences\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return None\n",
+    "    if length is None:\n",
+    "        length = max([len(sentence) for sentence in x])\n",
+    "    return pad_sequences(x, maxlen=length, padding='post')\n",
+    "\n",
     "tests.test_pad(pad)\n",
     "\n",
     "# Pad Tokenized output\n",
@@ -232,13 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Preprocessed\n"
+     ]
+    }
+   ],
    "source": [
     "def preprocess(x, y):\n",
     "    \"\"\"\n",
@@ -286,13 +390,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "`logits_to_text` function loaded.\n"
+     ]
+    }
+   ],
    "source": [
     "def logits_to_text(logits, tokenizer):\n",
     "    \"\"\"\n",
@@ -620,9 +732,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Environment (conda_aind-nlp-capstone)",
    "language": "python",
-   "name": "python3"
+   "name": "conda_aind-nlp-capstone"
   },
   "language_info": {
    "codemirror_mode": {
@@ -634,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
